<resources>
    <string name="app_name">Teilnehmerverwaltung</string>
    <string name="customer_detail_name_hint">Name</string>
    <string name="add_attendee_create_button">@string/save</string>
    <string name="add_attendee_name_error_message">Bitte gib einen Namen ein.</string>
    <string name="events_here_platzhalter">Events here</string>
    <string name="add_event_name_hint">Termin Bezeichnung</string>
    <string name="add_event_name_error">Bitte gib eine Bezeichnung ein.</string>
    <string name="event_add_button">Termin hinzufügen</string>
    <string name="add_event_dialog_title">Termin anlegen</string>
    <string name="add_event_dialog_positiv">@string/save</string>
    <string name="add_event_dialog_negativ">@string/cancel</string>

    <string name="save">Speichern</string>
    <string name="cancel">Abbrechen</string>
    <string name="ok">OK</string>
    <string name="add">OK</string>
    <string name="event_attendees_count">(%d)</string>
    <string name="customer_quota_text">Kontingent: %d</string>
    <string name="attendee_empty_quota_dialog_title">"Kontigent aufgebraucht "</string>
    <string name="attendee_empty_quota_dialog_message">Das Kontigent muss aufgefüllt werden um an dem Termin teilzunehmen.</string>
    <string name="attendee_empty_dialog_quota_dialog_negative">@string/ok</string>
    <string name="customer_detail_quota_hint">Kontigent</string>
    <string name="customer_detail_quota_error">Kontingent darf nicht negativ sein</string>
    <string name="main_activity_action_add_customer_title">Kunde hinzufügen</string>
    <string name="add_customer_title">Kunde hinzufügen</string>
    <string name="login_password_hint">Password</string>
    <string name="login_email_hint">Email</string>
    <string name="login_button">Login</string>
    <string name="login_email_error_message">Bitte Email-Adresse eingeben.</string>
    <string name="login_password_error_message">Bitte Password eingeben.</string>
    <string name="auth_failed">Login fehlgeschlagen. Überprüfen sie Ihre Eingabe.</string>
    <string name="customer_info_participations_headline">Teilgenommene Veranstaltungen (%d)</string>
    <string name="customer_info_add_10_to_quota">10er Karte hinzufügen…</string>
    <string name="customer_info_quota_headline">Kontingent</string>
    <string name="customer_info_no_participations_placeholder_message">%s hat noch an keinen Veranstaltungen teilgenommen.</string>
    <string name="pin_dialog_error_message">Falscher PIN.</string>
    <string name="quota_add_10_dialog_title">10er Karte hinzufügen</string>
    <string name="quota_add_10_dialog_positiv">@string/add</string>
    <string name="pin_dialog_hint">Bitte PIN eingeben</string>
    <string name="customer_detail_action_deaktivate_customer">Kunde deaktivieren</string>
    <string name="customer_detail_action_edit_customer">Kunde bearbeiten</string>
    <string name="customer_detail_action_aktivate_customer">Kunde aktivieren</string>

</resources>
